Changed font-awesome library to the 4.0 version Changed text for the "about" section

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<title>StreamKit - Completekit for streaming and recording live events  </title>
@@ -79,7 +79,7 @@
 				</div>
 			</div>
 			<div class="fadeInUp delay animated hidden-phone" id="more">
-				<a href="#services-top" class="m-btn a-btn blue big icn-only"><i class="icon-sort-down icon-3x pull-left"></i></a>
+				<a href="#services-top" class="m-btn a-btn blue big icn-only"><i class="fa fa-chevron-down"></i></a>
 			</div>
 		</section>
 
@@ -89,48 +89,45 @@
 		<section id="services-top">
 	<!--start services-desktop header-->
 			<section id="services-top-desktop" class="visible-desktop" data-stellar-background-ratio="0.6" data-stellar-vertical-offset="20">
-				<h1 class="header">What is StreamKit</h1>
-				<p class="header">How awesome can it be?</p>
+				<h1 class="header">What is StreamKit ?</h1>
+				<p class="header">Your online broadcasting kit</p>
 			</section>
 	<!--start services-mobile header-->
 			<section id="services-top-mobile" class="hidden-desktop">
-				<h1 class="header">Services</h1>
-				<!-- <p class="header">How awesome can it be?</p> -->
+				<h1 class="header">What is StreamKit ?</h1>
+				<p class="header">Your online broadcasting kit</p>
 			</section>
 		</section>
 	<!--start services-->
 		<section id="services">
+			<br/>
 			<div class="container">
-                        
-				<div class="row divide">
-<div class="span6 offset3">
-						<!-- <h1>What is Streamkit?</h1> -->
 
-						<p class="center">Streamkit is a live streaming platform which offers all necessary tools for broadcasting and recording live programs or events. We offer you custom tailored services, integration with multiple channels and great support </p>
-					</div>
-				</div>
-			<div class="divider"></div>	
-      <div class="span12">
+				<div class="divider"></div>
+				<div class="span12">
 						<ul class="thumbnails">
 							<li class="span4">
 								<div class="thumbnail">
-									<i class="icon-cogs"></i>
-									<h4>Based on an Open Source project</h4>
-									<span>Sourcecode on Github</span>
+									<i class="fa fa-video-camera"></i>
+									<h4>LIVE STREAMING</h4>
+									<span>Video platform</span>
+									<p>Streamkit is a live streaming platform which offers all necessary tools for broadcasting and recording live programs and events.</p>
 								</div>
 							</li>
 							<li class="span4">
 								<div class="thumbnail">
-									<i class="icon-eye-open"></i>
-									<h4>HD Broadcasting</h4>
+									<i class="fa fa-cloud"></i>
+									<h4>HD / 4K</h4>
 									<span>Best video quality</span>
+									<p>From small  churches to mid-size TV channels, Streamkit guarantees excellent quality, worldwide streaming, full branding, no ads, tailored services, integrated analytics, native mobile apps and 24/7 support.</p>
 								</div>
 							</li>
 							<li class="span4">
 								<div class="thumbnail">
-									<i class="icon-stethoscope"></i>
-									<h4>Support</h4>
-									<span>It's Free and Always Will Be</span>
+									<i class="fa fa-desktop"></i>
+									<h4>ANY DEVICE</h4>
+									<span>Anywhere</span>
+									<p>You can reach viewers through any desktop browser, mobile phone or tablet.</p>
 								</div>
 							</li>
 						</ul>
@@ -440,35 +437,35 @@ and devices that have Android as their OS.</p>
     <p> ** For the live recorded videos</p> 
                     
     <td align="center">
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="VH8GMWK7P5G6Y">
-<table>
-<tr><td><input type="hidden" name="on0" value=""></td></tr><tr><td><select name="os0">
-	<option value="Basic">Basic : $39,00  - monthly</option>
-	<option value="Basic (-20%)">Basic (-20%) : $375,00- yearly</option>
-</select> </td></tr>
-</table>
-<input type="hidden" name="currency_code" value="USD">
-<input type="image" src="https://www.paypalobjects.com/en_US/AT/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
+		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+			<input type="hidden" name="cmd" value="_s-xclick">
+			<input type="hidden" name="hosted_button_id" value="VH8GMWK7P5G6Y">
+			<table>
+				<tr><td><input type="hidden" name="on0" value=""></td></tr><tr><td><select name="os0">
+				<option value="Standard">Standard : €29,00 EUR - monthly</option>
+				<option value="Standard (-20%)">Standard (-20%) : €279,00 EUR - yearly</option>
+			</select> </td></tr>
+			</table>
+			<input type="hidden" name="currency_code" value="EUR">
+			<input type="image" src="https://www.paypalobjects.com/en_US/AT/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+			<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+		</form>
 </td>
     <td align="center">
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="9D9LG4A97TZPW">
-<table>
-<tr><td><input type="hidden" name="on0" value=""></td></tr><tr><td><select name="os0">
-	<option value="Standard">Standard : $99,00 - monthly</option>
-	<option value="Standard (-20%)">Standard (-20%) : $950,00 - yearly</option>
-</select> </td></tr>
-</table>
-<input type="hidden" name="currency_code" value="USD">
-<input type="image" src="https://www.paypalobjects.com/en_US/AT/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>   
-    </td>
+		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+			<input type="hidden" name="cmd" value="_s-xclick">
+			<input type="hidden" name="hosted_button_id" value="9D9LG4A97TZPW">
+			<table>
+				<tr><td><input type="hidden" name="on0" value=""></td></tr><tr><td><select name="os0">
+				<option value="Premium">Premium : €79,00 EUR - monthly</option>
+				<option value="Premium (-20%)">Premium (-20%) : €759,00 EUR - yearly</option>
+			</select> </td></tr>
+			</table>
+			<input type="hidden" name="currency_code" value="EUR">
+			<input type="image" src="https://www.paypalobjects.com/en_US/AT/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+			<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+		</form>
+	</td>
  <td align="center">
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
