--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
 </section>
 
 
-<p></p>
 <!--start services header-->
 <section id="services-top">
     <!--start services-desktop header-->
@@ -112,34 +111,33 @@
         <div class="divider"></div>
         <div class="span12">
             <ul class="thumbnails">
+				<li class="span4">
+					<div class="thumbnail">
+						<i class="fa fa-video-camera"></i>
+						<h4>CUSTOM SOFTWARE SOLUTIONS</h4>
+						<span>For TV stations</span>
+
+						<p>OTT applications developed for delivery of live and on-demand content</p>
+					</div>
+				</li>
                 <li class="span4">
                     <div class="thumbnail">
-                        <i class="fa fa-video-camera"></i>
-                        <h4>LIVE STREAMING</h4>
-                        <span>Video platform</span>
+                        <i class="fa fa-cloud"></i>
+                        <h4>CLOUD STREAMING PLATFORM</h4>
+                        <span>For LIVE and VOD content</span>
 
-                        <p>Streamkit is a live streaming platform which offers all necessary tools for broadcasting and
-                            recording live programs and events.</p>
+                        <p>StreamKit Cloud integrates with industry’s clouds for best cost effective solutions.  It offers a live streaming platform with all necessary tools for broadcasting and recording live programs and events.</p>
                     </div>
                 </li>
                 <li class="span4">
                     <div class="thumbnail">
-                        <i class="fa fa-cloud"></i>
+                        <i class="fa fa-eye"></i>
                         <h4>HD / 4K</h4>
                         <span>Best video quality</span>
 
                         <p>From small churches to mid-size TV channels, Streamkit guarantees excellent quality,
                             worldwide streaming, full branding, no ads, tailored services, integrated analytics, native
                             mobile apps and 24/7 support.</p>
-                    </div>
-                </li>
-                <li class="span4">
-                    <div class="thumbnail">
-                        <i class="fa fa-desktop"></i>
-                        <h4>ANY DEVICE</h4>
-                        <span>Anywhere</span>
-
-                        <p>You can reach viewers through any desktop browser, mobile phone or tablet.</p>
                     </div>
                 </li>
             </ul>
