updated contact and pricing sections

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>StreamKit - Completekit for streaming and recording live events </title>
@@ -198,15 +198,15 @@
     <!--start gallery-desktop header-->
     <section id="gallery-top-desktop" class="visible-desktop" data-stellar-background-ratio="0.6"
              data-stellar-vertical-offset="20">
-        <h1 class="header">Native Mobile Apps</h1>
+        <h1 class="header">Native Apps</h1>
 
-        <p class="header">You can now build your own</p>
+        <p class="header">Your own TV App and Mobile App</p>
     </section>
     <!--start gallery-mobile header-->
     <section id="gallery-top-mobile" class="hidden-desktop">
-        <h1 class="header">Gallery</h1>
+        <h1 class="header">Native Apps</h1>
 
-        <p class="header">Alternative Works Version</p>
+        <p class="header">Your own TV App and Mobile App</p>
     </section>
 </section>
 <!--start gallery-->
@@ -233,8 +233,8 @@
                 </div>
             </div>
             <div class="span5 divide">
-                <h1>Slick admin panel </h1>
-                <h4>Build using The Sling Engine </h4>
+                <h1>Go beyond web streaming</h1>
+                <h4> keep your audience closer </h4>
 
                 <p>Based on an open source project, the administration panel can be easily extended with new features
                     and plugins. </p>
@@ -301,7 +301,7 @@
                 <li class="brief">Go native on mobile</li>
                 <li class="price">$99</li>
                 <li>+ Native mobile app for your channel</li>
-                <li>+ Cloud transcoding for adaptive qualities</li>
+                <li>+ Live transcoding for adaptive qualities </li>
                 <li>And more...</li>
                 <li class="buy">
                     <button>Sign up</button>
@@ -447,37 +447,19 @@
     <td align="center"><img src="img/checked.png" alt="checked"></td>
 </tr>
 <tr>
-    <td>Chromecast</td>
+    <td>TV Chromecast support</td>
     <td align="center">-</td>
     <td align="center">-</td>
     <td align="center"><img src="img/checked.png" alt="checked"></td>
 </tr>
 <tr>
-    <td>Roku</td>
-    <td align="center">-</td>
-    <td align="center">-</td>
-    <td align="center"><img src="img/checked.png" alt="checked"></td>
-</tr>
-<tr>
-    <td>Xbox360</td>
-    <td align="center">-</td>
-    <td align="center">-</td>
-    <td align="center"><img src="img/checked.png" alt="checked"></td>
-</tr>
-<tr>
-    <td>PlayStation3</td>
+    <td>TV Roku App</td>
     <td align="center">-</td>
     <td align="center">-</td>
     <td align="center"><img src="img/checked.png" alt="checked"></td>
 </tr>
 <tr>
     <td>Video archive transcoding</td>
-    <td align="center">-</td>
-    <td align="center">-</td>
-    <td align="center"><img src="img/checked.png" alt="checked"></td>
-</tr>
-<tr>
-    <td>Content monetization</td>
     <td align="center">-</td>
     <td align="center">-</td>
     <td align="center"><img src="img/checked.png" alt="checked"></td>
@@ -611,10 +593,11 @@
             </div>
             <!--start sidebar-->
             <div class="span4" id="address">
-                <p>Hollergasse 21, 1150<br>
-                    Vienna, Austria</p>
+                <p>US Sillicon Valley Office: </p> 
+                <p>(+1) 516-7STREAM</p>
 
-                <p><abbr title="Phone">F:</abbr> (+43) 699-17067077<br>
+                <p><abbr title="Phone">Europe Office:</abbr> </p> 
+                <p>(+43) 699-17067077
                 </p>
             </div>
         </div>
