updated email form, and PayPal buttons

--- a/index.html
+++ b/index.html
@@ -283,6 +283,19 @@
             </ul>
         </div>
         <div class="promo second">
+            <h4>Professional</h4>
+            <ul class="features">
+                <li class="brief">TV Channel, 24/7 Streaming</li>
+                <li class="price">Custom</li>
+                <li>+ Custom software solutions</li>
+                <li>+ Multi CDN support</li>
+                <li>And more...</li>
+                <li class="buy">
+                    <a href="#contact-top"><button>Contact us</button></a>
+                </li>
+            </ul>
+        </div>
+        <div class="promo second">
             <h4>TV Plus</h4>
             <ul class="features">
                 <li class="brief">Stream on the big TV screens</li>
@@ -465,7 +478,7 @@
     <td align="center"><img src="img/checked.png" alt="checked"></td>
 </tr>
 <tr>
-    <td>* The 20% discount is applicable only
+    <td>* The 25% discount is applicable only
         for the yearly subscriptions
     </
     >
@@ -473,71 +486,52 @@
 
     <td align="center">
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-            <input type="hidden" name="cmd" value="_s-xclick">
-            <input type="hidden" name="hosted_button_id" value="VH8GMWK7P5G6Y">
-            <table>
-                <tr>
-                    <td><input type="hidden" name="on0" value=""></td>
-                </tr>
-                <tr>
-                    <td><select name="os0">
-                        <option value="Standard">Standard : €29,00 EUR - monthly</option>
-                        <option value="Standard (-20%)">Standard (-20%) : €279,00 EUR - yearly</option>
-                    </select></td>
-                </tr>
-            </table>
-            <input type="hidden" name="currency_code" value="EUR">
-            <input type="image" src="https://www.paypalobjects.com/en_US/AT/i/btn/btn_subscribeCC_LG.gif" border="0"
-                   name="submit" alt="PayPal - The safer, easier way to pay online!">
-            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-        </form>
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="VE7JNUCQUHNVQ">
+<table>
+<tr><td><input type="hidden" name="on0" value=""></td></tr><tr><td><select name="os0">
+    <option value="$39/month - Billed Anualy">$39/month - Billed Anualy : $468.00 USD - yearly</option>
+    <option value="$52/month - month-to-month">$52/month - month-to-month : $52.00 USD - monthly</option>
+</select> </td></tr>
+</table>
+<input type="hidden" name="currency_code" value="USD">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribe_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
     </td>
     <td align="center">
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-            <input type="hidden" name="cmd" value="_s-xclick">
-            <input type="hidden" name="hosted_button_id" value="9D9LG4A97TZPW">
-            <table>
-                <tr>
-                    <td><input type="hidden" name="on0" value=""></td>
-                </tr>
-                <tr>
-                    <td><select name="os0">
-                        <option value="Premium">Premium : €79,00 EUR - monthly</option>
-                        <option value="Premium (-20%)">Premium (-20%) : €759,00 EUR - yearly</option>
-                    </select></td>
-                </tr>
-            </table>
-            <input type="hidden" name="currency_code" value="EUR">
-            <input type="image" src="https://www.paypalobjects.com/en_US/AT/i/btn/btn_subscribeCC_LG.gif" border="0"
-                   name="submit" alt="PayPal - The safer, easier way to pay online!">
-            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-        </form>
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="PB6VPP3333QJ4">
+<table>
+<tr><td><input type="hidden" name="on0" value=""></td></tr><tr><td><select name="os0">
+    <option value="$99/month - 1 year contract">$99/month - 1 year contract : $99.00 USD - monthly</option>
+    <option value="$132/month - month-to-month">$132/month - month-to-month : $132.00 USD - monthly</option>
+</select> </td></tr>
+</table>
+<input type="hidden" name="currency_code" value="USD">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribe_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
     </td>
     <td align="center">
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-            <input type="hidden" name="cmd" value="_s-xclick">
-            <input type="hidden" name="hosted_button_id" value="VH8GMWK7P5G6Y">
-            <table>
-                <tr>
-                    <td><input type="hidden" name="on0" value=""></td>
-                </tr>
-                <tr>
-                    <td><select name="os0">
-                        <option value="Advanced">Advanced : $199,00 - monthly</option>
-                        <option value="Advanced (-20%)">Advanced (-20%) : $1910,00- yearly</option>
-                    </select></td>
-                </tr>
-            </table>
-            <input type="hidden" name="currency_code" value="USD">
-            <input type="image" src="https://www.paypalobjects.com/en_US/AT/i/btn/btn_subscribeCC_LG.gif" border="0"
-                   name="submit" alt="PayPal - The safer, easier way to pay online!">
-            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-        </form>
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="52VBECYALWW3G">
+<table>
+<tr><td><input type="hidden" name="on0" value=""></td></tr><tr><td><select name="os0">
+ <option value="$199/month - 1 year contract">$199/month - 1 year contract : $199.00 USD - monthly</option>
+ <option value="$265/month - month-to-month">$265/month - month-to-month : $265.00 USD - monthly</option>
+</select> </td></tr>
+</table>
+<input type="hidden" name="currency_code" value="USD">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribe_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
     </td>
 </tr>
 
 </table>
-
 
 </div>
 </div>
