--- a/index.html
+++ b/index.html
@@ -32,59 +32,67 @@
     </style>
 
 </head>
-<body data-spy="scroll" data-target=".navbar" data-offset='64' onLoad="$.stellar();">
-<div id="preloader">
-    <div id="status">&nbsp;</div>
-</div>
+<body class="page_homepage" data-spy="scroll" data-target=".navbar" data-offset='64' onLoad="$.stellar();">
+<!--<div id="preloader">-->
+    <!--<div id="status">&nbsp;</div>-->
+<!--</div>-->
 <!--start navigation-->
-<div class="navbar navbar-fixed-top" id="navigation">
-    <div class="navbar-inner">
-        <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
-            <a href="#intro" class="brand"><img src="img/logo_sk_1.png" alt=""></a>
+<!--<div class="navbar navbar-fixed-top" id="navigation">-->
+    <!--<div class="navbar-inner">-->
+        <!--<div class="container">-->
+            <!--<a href="#intro" class="brand"><img src="img/logo_sk_1.png" alt=""></a>-->
 
-            <div class="nav-collapse collapse">
-                <ul class="nav pull-right">
-                    <li><a href="#intro">Home</a></li>
-                    <li><a href="#services-top">About</a></li>
-                    <!-- <li><a href="#works-top">Works</a></li>
-                    <li><a href="#gallery-top">Administration</a></li> -->
-                    <li><a href="#prices-top">Prices</a></li>
-                    <li><a href="#contact-top">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
-<section id="intro">
-    <div class="container">
-        <div class="row">
-            <div class="span8 offset2 margin25">
-                <div id="carousel_fade_intro" class="carousel slide carousel-fade">
-                    <div class="carousel-inner">
-                        <div class="inactive item">
-                            <h2>Complete kit for streaming and recording live events.</h2>
-                        </div>
-                        <div class="active item">
-                            <h2>No ads. No limits. <br/>Incredible support.</h2>
-                        </div>
-                        <div class="inactive item">
-                            <h2> And 20% discount for the yearly rates <h2/>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="fadeInUp delay animated hidden-phone" id="more">
-        <a href="#services-top" class="m-btn a-btn blue big icn-only"><i class="fa fa-chevron-down"></i></a>
-    </div>
-</section>
+            <!--<div class="nav-collapse collapse">-->
+                <!--<ul class="nav pull-right">-->
+                    <!--&lt;!&ndash;<li><a href="#intro">Home</a></li>&ndash;&gt;-->
+                    <!--<li><a href="#services-top">Product</a></li>-->
+                    <!--&lt;!&ndash; <li><a href="#works-top">Works</a></li>-->
+                    <!--<li><a href="#gallery-top">Administration</a></li> &ndash;&gt;-->
+                    <!--<li><a href="#prices-top">Prices</a></li>-->
+                    <!--<li><a href="#contact-top">Contact</a></li>-->
+                <!--</ul>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
+<!--<section id="intro">-->
+    <!--<div class="container">-->
+        <!--<div class="row">-->
+            <!--<div class="span8 offset2 margin25">-->
+                <!--<div id="carousel_fade_intro" class="carousel slide carousel-fade">-->
+                    <!--<div class="carousel-inner">-->
+                        <!--<div class="inactive item">-->
+                            <!--<h2>Complete kit for streaming and recording live events.</h2>-->
+                        <!--</div>-->
+                        <!--<div class="active item">-->
+                            <!--<h2>No ads. No limits. <br/>Incredible support.</h2>-->
+                        <!--</div>-->
+                        <!--<div class="inactive item">-->
+                            <!--<h2> And 20% discount for the yearly rates <h2/>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div class="fadeInUp delay animated hidden-phone" id="more">-->
+        <!--<a href="#services-top" class="m-btn a-btn blue big icn-only"><i class="fa fa-chevron-down"></i></a>-->
+    <!--</div>-->
+<!--</section>-->
+<!--<section id="intro">-->
+<!--<div class="container">-->
+<header class="splash-entrance">
 
+        <video muted id="video" class="banner-video" preload="auto" loop="loop" autoplay="">
+            <source src="video/stock-footage-young-man-with-tablet-computer-on-sofa.mp4" type="video/mp4">
+        </video>
+
+        <div class="splash-content">
+            <img class="logo" title="" src="img/logo_streamkit.png" width="329px">
+            <h2>Live Streaming Toolset</h2>
+            <p>Complete broadcasting-toolset for video streaming. <br/>Full branding, HD quality, no ads, powerful analytics and personalised native mobile apps, with StreamKit you get it all.</p>
+        </div>
+</header>
 
 <!--start services header-->
 <section id="services-top">
