Updated information for "What is streamkit ?"

--- a/index.html
+++ b/index.html
@@ -94,74 +94,60 @@
         </div>
 </header>
 
-<!--start services header-->
-<section id="services-top">
-    <!--start services-desktop header-->
-    <section id="services-top-desktop" class="visible-desktop" data-stellar-background-ratio="0.6"
-             data-stellar-vertical-offset="20">
-        <h1 class="header">What is StreamKit ?</h1>
 
-        <p class="header">Your online broadcasting kit</p>
-    </section>
-    <!--start services-mobile header-->
-    <section id="services-top-mobile" class="hidden-desktop">
-        <h1 class="header">What is StreamKit ?</h1>
-
-        <p class="header">Your online broadcasting kit</p>
-    </section>
-</section>
-<!--start services-->
 <section id="services">
-    <br/>
-
     <div class="container">
+        <div class="row divide">
+            <div class="span8 offset2">
+                <h1>What is StreamKit ?</h1>
+                <h4>Your All-Inclusive Online Broadcasting Kit</h4>
+                <!--<p class="center">We provide spiritual, education, and sports organizations with a complete kit for streaming live and on-demand events.</p>-->
+            </div>
 
-        <div class="divider"></div>
-        <div class="span12">
-            <ul class="thumbnails">
-				<li class="span4">
-					<div class="thumbnail">
-						<i class="fa fa-video-camera"></i>
-						<h4>CUSTOM SOFTWARE SOLUTIONS</h4>
-						<span>For TV stations</span>
+            <div class="span12">
+                <ul class="thumbnails">
+                    <li class="span4">
+                        <div class="thumbnail">
+                            <i class="fa fa-cloud fa-5x"></i>
+                            <h4>CLOUD STREAMING PLATFORM</h4>
+                            <span>For LIVE and VOD content</span>
 
-						<p>OTT applications developed for delivery of live and on-demand content</p>
-					</div>
-				</li>
-                <li class="span4">
-                    <div class="thumbnail">
-                        <i class="fa fa-cloud"></i>
-                        <h4>CLOUD STREAMING PLATFORM</h4>
-                        <span>For LIVE and VOD content</span>
+                            <p>StreamKit Cloud integrates with industry's clouds for best cost effective solutions.  It offers a live streaming platform with all necessary tools for broadcasting and recording live programs and events.</p>
+                        </div>
+                    </li>
+                    <li class="span4">
+                        <div class="thumbnail">
+                            <i class="fa fa-eye fa-5x"></i>
+                            <h4>HD / 4K</h4>
+                            <span>Best video quality</span>
 
-                        <p>StreamKit Cloud integrates with industry’s clouds for best cost effective solutions.  It offers a live streaming platform with all necessary tools for broadcasting and recording live programs and events.</p>
-                    </div>
-                </li>
-                <li class="span4">
-                    <div class="thumbnail">
-                        <i class="fa fa-eye"></i>
-                        <h4>HD / 4K</h4>
-                        <span>Best video quality</span>
+                            <p>From churches to 24/7 broadcasting TV channels, StreamKit guarantees excellent quality,
+                                full branding, no ads, tailored services, integrated analytics and personalized native
+                                mobile apps.</p>
+                        </div>
+                    </li>
+                    <li class="span4">
+                        <div class="thumbnail">
+                            <i class="fa fa-video-camera fa-5x"></i>
+                            <h4>CUSTOM SOFTWARE SOLUTIONS</h4>
+                            <span>For TV stations</span>
 
-                        <p>From small churches to mid-size TV channels, Streamkit guarantees excellent quality,
-                            worldwide streaming, full branding, no ads, tailored services, integrated analytics, native
-                            mobile apps and 24/7 support.</p>
-                    </div>
-                </li>
-            </ul>
+                            <p>OTT applications developed for delivery of live and on-demand content</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
         </div>
     </div>
-    </div>
 </section>
-<p></p>
+
 <!--start works header-->
 <section id="works-top">
     <!--start works-desktop header-->
     <section id="works-top-desktop" class="visible-desktop" data-stellar-background-ratio="0.6"
              data-stellar-vertical-offset="20">
-        <h1 class="header">Works</h1>
 
-        <p class="header">Any device, Anywhere</p>
     </section>
     <!--start works-mobile header-->
     <section id="works-top-mobile" class="hidden-desktop">
